--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
 #canvas1{
     background-color: black;
     border: 20px solid gray;
+    display: block;
+    margin: 0px auto;
+}
+#div1{
+    /* align-items: center; */
+}
+#score{
+display: flex;
+justify-content: center;
+}
+#start{
+    /* transform: scale(1,1); */
+    margin: auto;
+    block-size: 40px;
+    text-transform: uppercase;
+    /* float: left; */
+}
+#pause{
+    /* transform: scale(1,1); */
+    margin: auto;
+    block-size: 40px;
+    text-transform: uppercase;
+    /* float: right; */
+}
+#div2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
