--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,37 @@
 #canvas1{
     background-color: black;
-    border: 20px solid gray;
+    border: 10px solid rgb(45, 195, 206);
     display: block;
     margin: 0px auto;
+    width: auto;
 }
 #div1{
     /* align-items: center; */
-    width: 500px;
-    height: 200px;
-    margin: auto;
+    width: 82%;
+    justify-content: center;
 }
 #score{
     display: flex;
     justify-content: center;
 }
 #start{
-    /* transform: scale(1,1); */
-    margin: auto;
+    transform: scale(1,1);
+    color: chartreuse;
     block-size: 40px;
     text-transform: uppercase;
+    text-align: center;
     /* float: left; */
 }
 #pause{
-    /* transform: scale(1,1); */
-    margin: auto;
+    transform: scale(1,1);
+    color: brown;
     block-size: 40px;
     text-transform: uppercase;
+    text-align: center;
     /* float: right; */
 }
 #div2{
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
+    justify-content: center;
 }
