--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+#arrowsbg{
+    background-color: dimgray;
+    width: 180px;
+    border: 4px solid;
+}
+
 #canvas1{
     background-color: black;
     border: 10px solid rgb(45, 195, 206);
@@ -5,31 +11,40 @@
     margin: 0px auto;
     width: auto;
 }
+
 #div1{
     /* align-items: center; */
     width: 82%;
     justify-content: center;
 }
+
 #score{
     display: flex;
     justify-content: center;
+    border: 2px solid;
+    width: 250px;
 }
+
 #start{
     transform: scale(1,1);
     color: chartreuse;
     block-size: 40px;
     text-transform: uppercase;
     text-align: center;
+    background-color: black;
     /* float: left; */
 }
+
 #pause{
     transform: scale(1,1);
     color: brown;
     block-size: 40px;
     text-transform: uppercase;
     text-align: center;
+    background-color: black;
     /* float: right; */
 }
+
 #div2{
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
